Fix calendar in dark mode

--- a/client/src/app/menu/avatar-notification.component.scss
+++ b/client/src/app/menu/avatar-notification.component.scss
@@ -73,7 +73,7 @@
     justify-content: center;
 
     background-color: var(--mainColor);
-    color: var(--mainBackgroundColor);
+    color: var(#fff);
     font-size: 10px;
     font-weight: $font-semibold;
 
