--- a/client/src/sass/include/_mixins.scss
+++ b/client/src/sass/include/_mixins.scss
@@ -261,6 +261,10 @@
       color: transparent;
       text-shadow: 0 0 0 #000;
     }
+
+    option {
+      color: #000;
+    }
   }
 }
 
